<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/purple_500"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rlActionbar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:paddingVertical="15sp"
        android:background="@color/purple_700"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBack"
            app:tint="@color/white"
            android:layout_width="30dp"
            android:layout_height="wrap_content"

            android:layout_centerVertical="true"
            android:layout_marginHorizontal="20sp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="FAQ's"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_calculated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="On What Basis Covid is Predicted?"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/tintcolor"
            android:text="This app covid prediction is based on the following research papers:"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/messageWithLink"
            android:textColorLink="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/textViLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/messageLink"
            android:textColorLink="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tv_cretinine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="What are Cretinine levels?"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cretinine_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cretinine_levels"
            android:textSize="18sp"
            android:textColor="@color/tintcolor"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tv_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="What is BMI?"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_bmi_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_descption_str"
            android:textSize="18sp"
            android:textColor="@color/tintcolor"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="About this application"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_about_desc"
            android:layout_width="wrap_content"
            android:textColor="@color/tintcolor"
            android:layout_height="wrap_content"
            android:text="@string/abot_desc_str"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="DEVELOPERS"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_dev_desc1"
            android:layout_width="wrap_content"
            android:textColor="@color/tintcolor"
            android:layout_height="wrap_content"
            android:text="@string/dev_name1"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_dev_desc2"
            android:layout_width="wrap_content"
            android:textColor="@color/tintcolor"
            android:layout_height="wrap_content"
            android:text="@string/dev_name2"
            android:textSize="18sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/tv_dev_desc3"
            android:layout_width="wrap_content"
            android:textColor="@color/tintcolor"
            android:layout_height="wrap_content"
            android:text="@string/dev_name3"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
